--- a/index.html
+++ b/index.html
@@ -5,5 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body class="bg-white">
+    <header class="w-full border-blue-500 border-2">
+      <nav class="flex justify-between px-20 py-3">
+        <div class="flex justify-between w-[500px]">
+          <h3 class="text-2xl font-bold">Triper</h3>
+          <div class="border-2 w-[400px] items-center border-red-600">
+            <ul class="flex text-lg justify-between p-2">
+              <li>Properties</li>
+              <li>Attraction</li>
+              <li>Popular</li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <button
+            class="text-blue-700 bg-white border-blue-700 hover:bg-blue-600 hover:text-white hover:border-white border-2 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Sign Up
+          </button>
+          <button
+            class="text-white bg-blue-700 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Log in
+          </button>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="border-2 flex border-red-600 justify-center items-center">
+        <div
+          class="hero-section relative flex justify-center items-center rounded-4xl bg-black/60 bg-blend-overlay h-96 w-full mx-20 bg-cover bg-center bg-[url('https://i.pinimg.com/736x/37/cc/9a/37cc9adaec9c73555a9f63ce498256ca.jpg')]"
+        >
+          <div class="text-center text-white">
+            <h1 class="text-5xl font-bold">Book Your stay with Tripster</h1>
+            <p class="mt-3 text-2xl">
+              <span id="countNumber">1,480,086</span> rooms around the world are
+              waiting for you!
+            </p>
+          </div>
+          <div
+            class="absolute p-2 flex justify-around items-center top-88 h-[70px] w-[70%] bg-white border-2 border-blue-500 rounded-4xl text-black capitalize"
+          >
+            <div class="border-r-2 w-[240px]">
+              <h4 class="font-bold">Location</h4>
+              <p>Where are you going?</p>
+            </div>
+            <div class="border-r-2 w-[240px]">
+              <h4 class="font-bold">Check In</h4>
+              <p>Add date</p>
+            </div>
+            <div class="border-r-2 w-[240px]">
+              <h4 class="font-bold">Check-out</h4>
+              <p>Add date</p>
+            </div>
+            <div class="border-r-2 w-[240px]">
+              <h4 class="font-bold">Guests</h4>
+              <p>Number of guests</p>
+            </div>
+            <div
+              class="text-white flex justify-center items-center bg-blue-600 w-20 h-15 rounded-4xl"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-move-right"
+              >
+                <path d="M18 8L22 12L18 16"></path>
+                <path d="M2 12H22"></path>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
