--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="flex justify-between w-[500px]">
           <h3 class="text-2xl font-bold">Triper</h3>
           <div class="w-[400px] items-center">
-            <ul class="flex text-lg justify-between p-2">
+            <ul class="flex text-lg justify-between p-2 cursor-pointer">
               <li>Properties</li>
               <li>Attraction</li>
               <li>Popular</li>
@@ -42,14 +42,15 @@
           class="hero-section relative flex justify-center items-center rounded-4xl bg-black/50 bg-blend-overlay h-96 w-full mx-20 bg-cover bg-center bg-[url('https://i.pinimg.com/736x/37/cc/9a/37cc9adaec9c73555a9f63ce498256ca.jpg')]"
         >
           <div class="text-center text-white">
-            <h1 class="text-5xl font-bold">Book Your stay with Tripster</h1>
+            <h1 class="text-5xl font-bold">Book Your stay with Tripster</h1>n
             <p class="mt-3 text-2xl">
               <span id="countNumber">1,480,086</span> rooms around the world are
               waiting for you!
             </p>
           </div>
+          <!--  -->
           <div
-            class="absolute p-4 flex justify-around items-center top-88 h-[70px] w-[70%] bg-white rounded-4xl text-black capitalize"
+            class="absolute p-4 flex justify-around shadow-[1px_2px_15px_rgba(0,0,0,0.2)] items-center top-88 h-[70px] w-[85%] bg-white rounded-4xl text-black capitalize"
           >
             <div class="border-r-2 w-[230px]">
               <h4 class="font-bold">Location</h4>
@@ -242,71 +243,73 @@
               </div>
             </div>
 
-            <div
-              class="w-[250px] h-[299px] shadow-lg rounded-2xl justify-center p-3"
-            >
-              <div class="w-[250px] h-[190px] flex">
-                <div
-                  class="w-[233px] h-[188px] bg-cover bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/6c/88/6a/6c886a58955b62b80b29d29a69432904.jpg')]"
-                >
-                  <div class="flex justify-between p-3">
-                    <div>
-                      <p
-                        class="bg-green/20 bg-blend-overlay bg-green-300 w-10 text-center rounded-2xl"
-                      >
-                        9:6
-                      </p>
-                    </div>
-
-                    <div
-                      class="text-white bg-white/20 bg-blend-overlay flex justify-center rounded-4xl p-2"
-                    >
-                      <p>
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="15"
-                          height="15"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="lucide lucide-heart"
+            <a href="/src/pages/detailpage.html">
+              <div
+                class="w-[250px] h-[299px] shadow-lg rounded-2xl justify-center p-3"
+              >
+                <div class="w-[250px] h-[190px] flex">
+                  <div
+                    class="w-[233px] h-[188px] bg-cover bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/6c/88/6a/6c886a58955b62b80b29d29a69432904.jpg')]"
+                  >
+                    <div class="flex justify-between p-3">
+                      <div>
+                        <p
+                          class="bg-green/20 bg-blend-overlay bg-green-300 w-10 text-center rounded-2xl"
                         >
-                          <path
-                            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
-                          />
-                        </svg>
-                      </p>
+                          9:6
+                        </p>
+                      </div>
+
+                      <div
+                        class="text-white bg-white/20 bg-blend-overlay flex justify-center rounded-4xl p-2"
+                      >
+                        <p>
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="15"
+                            height="15"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="lucide lucide-heart"
+                          >
+                            <path
+                              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
+                            />
+                          </svg>
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
+                <h2 class="capitalize mt-2 text-lg font-medium">
+                  Hotel Norrebro
+                </h2>
+                <p>Copenhagen</p>
+                <div class="flex justify-between">
+                  <h3 class="font-bold">from $130/night</h3>
+                  <p>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="lucide lucide-chevron-right"
+                    >
+                      <path d="m9 18 6-6-6-6" />
+                    </svg>
+                  </p>
+                </div>
               </div>
-              <h2 class="capitalize mt-2 text-lg font-medium">
-                Hotel Norrebro
-              </h2>
-              <p>Copenhagen</p>
-              <div class="flex justify-between">
-                <h3 class="font-bold">from $130/night</h3>
-                <p>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-right"
-                  >
-                    <path d="m9 18 6-6-6-6" />
-                  </svg>
-                </p>
-              </div>
-            </div>
+            </a>
 
             <div
               class="w-[250px] h-[299px] shadow-lg rounded-2xl justify-center p-3"
@@ -507,12 +510,12 @@
           </div>
         </div>
 
-        <div class="w-full border-2">
-          <div class="flex justify-between items-center px-10">
-            <div class="border-2 flex items-center gap-7 p-2">
-              <div
-                class="border-2 flex justify-center items-center w-[70px] h-[70px]"
-              >
+        <div class="w-full">
+          <div
+            class="flex justify-between items-center px-10 mx-15 rounded-3xl shadow-[1px_2px_15px_rgba(0,0,0,0.2)]"
+          >
+            <div class="flex items-center gap-7 p-2">
+              <div class="flex justify-center items-center w-[70px] h-[70px]">
                 <p class="text-2xl font-bold">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -560,6 +563,44 @@
         </div>
       </section>
     </main>
+
+    <footer class="mt-10 bg-gray-300">
+      <nav class="flex justify-between px-10 py-5">
+        <div>
+          <h1 class="font-bold">Tripster</h1>
+          <p class="font-thin">
+            Your favorite hotel booking experience <br />
+            Since 1997!
+          </p>
+          <p class="font-thin mt-3">Uizard 2022</p>
+        </div>
+        <div>
+          <ul class="font-thin place-items-end">
+            <li class="font-bold">Help</li>
+            <li
+              class="duration-100 transition hover:text-blue-400 cursor-pointer"
+            >
+              FAQ
+            </li>
+            <li
+              class="duration-100 transition hover:text-blue-400 cursor-pointer"
+            >
+              Customer Service
+            </li>
+            <li
+              class="duration-100 transition hover:text-blue-400 cursor-pointer"
+            >
+              How to guide
+            </li>
+            <li
+              class="duration-100 transition hover:text-blue-400 cursor-pointer"
+            >
+              Contact Us
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
 
     <script src="/src/script/main.js"></script>
   </body>
