--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           class="hero-section relative flex justify-center items-center rounded-4xl bg-black/50 bg-blend-overlay h-96 w-full mx-20 bg-cover bg-center bg-[url('https://i.pinimg.com/736x/37/cc/9a/37cc9adaec9c73555a9f63ce498256ca.jpg')]"
         >
           <div class="text-center text-white">
-            <h1 class="text-5xl font-bold">Book Your stay with Tripster</h1>n
+            <h1 class="text-5xl font-bold">Book Your stay with Tripster</h1>
+            n
             <p class="mt-3 text-2xl">
               <span id="countNumber">1,480,086</span> rooms around the world are
               waiting for you!
