--- a/src/pages/detailpage.html
+++ b/src/pages/detailpage.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/src/style/output.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- my header -->
@@ -38,7 +45,7 @@
 
     <!-- section one -->
     <section class="">
-      <div class="mt-10 p-8">
+      <div class="mt-10 p-1">
         <div class="flex justify-center gap-5 p-3">
           <!--  -->
           <div
@@ -49,23 +56,23 @@
             class="grid grid-cols-2 grid-rows-2 flex-1 justify-center items-center"
           >
             <div
-              class="w-[359px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/6b/61/9b/6b619b18f89bcdceec7e223c28e99f8e.jpg')]"
+              class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/6b/61/9b/6b619b18f89bcdceec7e223c28e99f8e.jpg')]"
             ></div>
             <div
-              class="w-[359px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/52/ad/91/52ad91a07d2d4b70b0042255183c4b24.jpg')]"
+              class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/52/ad/91/52ad91a07d2d4b70b0042255183c4b24.jpg')]"
             ></div>
             <div
-              class="w-[359px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/54/06/70/540670585f62ce43dc04a6a738efc27f.jpg')]"
+              class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/54/06/70/540670585f62ce43dc04a6a738efc27f.jpg')]"
             ></div>
             <div
-              class="w-[359px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/15/d6/5f/15d65f2df30d40447f4f60009a2567d1.jpg')]"
+              class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/15/d6/5f/15d65f2df30d40447f4f60009a2567d1.jpg')]"
             ></div>
           </div>
         </div>
         <!--  -->
         <div class="flex justify-between px-10 mt-10">
           <div>
-            <h1 class="font-bold ml-3">Hotel Norrebro</h1>
+            <h1 class="font-bold ml-3 text-2xl">Hotel Norrebro</h1>
             <p class="font-thin text-black">
               3-star hotel located in the heart of Copenhagen
             </p>
@@ -96,131 +103,28 @@
         <!--  -->
 
         <div class="px-10 mt-3">
-          <h1 class="font-bold">Property overview</h1>
+          <h1 class="font-bold text-2xl">Property overview</h1>
           <div class="mt-3 flex justify-between items-center p-4">
-            <div class="flex-1 flex">
+            <div class="flex-1 flex p-3 items-center">
               <ul class="gap-4 grid grid-rows-5 grid-cols-2 p-3">
+                <li class="flex gap-4"><i class="fa-solid fa-wifi"></i>Wifi</li>
                 <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-wifi"
-                  >
-                    <path d="M12 20h.01" />
-                    <path d="M2 8.82a15 15 0 0 1 20 0" />
-                    <path d="M5 12.859a10 10 0 0 1 14 0" />
-                    <path d="M8.5 16.429a5 5 0 0 1 7 0" />
-                  </svg>
-                  Wifi
-                </li>
-                <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-wind"
-                  >
-                    <path d="M12.8 19.6A2 2 0 1 0 14 16H2" />
-                    <path d="M17.5 8a2.5 2.5 0 1 1 2 4H2" />
-                    <path d="M9.8 4.4A2 2 0 1 1 11 8H2" />
-                  </svg>
+                  <i class="fa-solid fa-wind"></i>
                   Air Condition
                 </li>
                 <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-shower-head"
-                  >
-                    <path d="m4 4 2.5 2.5" />
-                    <path d="M13.5 6.5a4.95 4.95 0 0 0-7 7" />
-                    <path d="M15 5 5 15" />
-                    <path d="M14 17v.01" />
-                    <path d="M10 16v.01" />
-                    <path d="M13 13v.01" />
-                    <path d="M16 10v.01" />
-                    <path d="M11 20v.01" />
-                    <path d="M17 14v.01" />
-                    <path d="M20 11v.01" />
-                  </svg>
-                  Private Bathroom
+                  <i class="fa-solid fa-shower"></i> Private Bathroom
                 </li>
                 <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-id-card"
-                  >
-                    <path d="M16 10h2" />
-                    <path d="M16 14h2" />
-                    <path d="M6.17 15a3 3 0 0 1 5.66 0" />
-                    <circle cx="9" cy="11" r="2" />
-                    <rect x="2" y="5" width="20" height="14" rx="2" />
-                  </svg>
+                  <i class="fa-regular fa-address-card"></i>
                   Key Card Access
                 </li>
                 <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-square-parking"
-                  >
-                    <rect width="18" height="18" x="3" y="3" rx="2" />
-                    <path d="M9 17V7h4a3 3 0 0 1 0 6H9" />
-                  </svg>
-                  Free Parking
+                  <i class="fa-solid fa-square-parking text-[20px]"></i>Free
+                  Parking
                 </li>
                 <li class="flex gap-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-clock-10"
-                  >
-                    <circle cx="12" cy="12" r="10" />
-                    <polyline points="12 6 12 12 8 10" />
-                  </svg>
-                  24-hour front desk
+                  <i class="fa-regular fa-clock"></i>24-hour front desk
                 </li>
               </ul>
             </div>
@@ -242,9 +146,9 @@
     </section>
     <!-- end -->
 
-    <section class="bg-gray-200 px-10 py-5">
+    <section class="bg-gray-200 px-10 py-2">
       <div class="">
-        <h1>Rooms</h1>
+        <h1 class="font-bold ml-4 text-2xl">Rooms</h1>
         <!--  -->
         <div class="flex justify-center gap-4 p-5">
           <!--  -->
@@ -335,7 +239,7 @@
           <div class="w-[324px] rounded-2xl shadow-lg p-2">
             <div class="flex justify-center p-2 rounded-2xl">
               <div
-                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/a1/56/1b/a1561bc56c80723d92e9c47feb851352.jpg')]"
+                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/b6/aa/91/b6aa915a8af1139561f0b9ec24a2e5af.jpg')]"
               ></div>
             </div>
 
@@ -419,7 +323,7 @@
           <div class="w-[324px] rounded-2xl shadow-lg p-2">
             <div class="flex justify-center p-2 rounded-2xl">
               <div
-                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/a1/56/1b/a1561bc56c80723d92e9c47feb851352.jpg')]"
+                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/5f/e7/a4/5fe7a4f5c21646f0fc110008d214bace.jpg')]"
               ></div>
             </div>
 
@@ -503,7 +407,7 @@
           <div class="w-[324px] rounded-2xl shadow-lg p-2">
             <div class="flex justify-center p-2 rounded-2xl">
               <div
-                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/a1/56/1b/a1561bc56c80723d92e9c47feb851352.jpg')]"
+                class="bg-cover w-[100%] h-[150px] bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/d4/4c/ae/d44caee1f4929a78aaa6cf42d2075e00.jpg')]"
               ></div>
             </div>
 
@@ -587,7 +491,158 @@
       </div>
     </section>
     <!-- end -->
-     
+    <!--  -->
+
+    <section class="reviem-section px-10">
+      <h1 class="font-bold text-2xl mt-4">Reviews</h1>
+      <div class="px-10 flex items-center gap-3 justify-center py-2 w-full">
+        <div class="flex flex-1 mr-4">
+          <div class="w-[100%]">
+            <div class="w-full">
+              <div class="flex justify-between -mb-2">
+                <label for="progressBar" class="">Cleanliness</label>
+                <label for="">10/10</label>
+              </div>
+              <progress
+                id="progressBar"
+                value="100"
+                max="100"
+                class="w-full h-2 rounded-full overflow-hidden bg-gray-200"
+              ></progress>
+            </div>
+            <div class="w-full">
+              <div class="flex justify-between -mb-2">
+                <label for="progressBar" class="block">Amenities</label>
+                <label for="">7/10</label>
+              </div>
+              <progress
+                id="progressBar"
+                value="70"
+                max="100"
+                class="w-full h-2 rounded-full overflow-hidden bg-gray-200"
+              ></progress>
+            </div>
+            <div class="w-full">
+              <div class="flex justify-between -mb-2">
+                <label for="progressBar" class="block">Location</label>
+                <label for="">9/10</label>
+              </div>
+              <progress
+                id="progressBar"
+                value="90"
+                max="100"
+                class="w-full h-2 rounded-full overflow-hidden bg-gray-200"
+              ></progress>
+            </div>
+            <div class="w-full">
+              <div class="flex justify-between -mb-2">
+                <label for="progressBar" class="block">Comfort</label>
+                <label for="">8/10</label>
+              </div>
+              <progress
+                id="progressBar"
+                value="80"
+                max="100"
+                class="w-full h-2 rounded-full overflow-hidden bg-gray-200"
+              ></progress>
+            </div>
+            <div class="w-full">
+              <div class="flex justify-between t -mb-2">
+                <label for="progressBar" class="block">WiFi Connection</label>
+                <label for="">9/10</label>
+              </div>
+              <progress
+                id="progressBar"
+                value="90"
+                max="100"
+                class="w-full h-2 rounded-full overflow-hidden bg-gray-200"
+              ></progress>
+            </div>
+          </div>
+        </div>
+        <!--  -->
+        <!--  -->
+        <div class="flex-3 px-2">
+          <div class="one flex justify-between">
+            <div>
+              <p class="font-bold">Excellent value for the price</p>
+              <span class="text-gray-400 text-[12px]">Mark M</span>
+              <p>
+                We enjoyed our stay at this hotel. Er will definitely come back!
+              </p>
+            </div>
+            <!--  -->
+            <div class="flex items-center gap-5 p-1">
+              <p class="text-[1rem] font-bold text-green-600">Excellent</p>
+              <button
+                class="w-[60px] p-2 rounded-3xl text-green-600 bg-green-200"
+              >
+                10
+              </button>
+            </div>
+          </div>
+
+          <div class="two mt-2 flex justify-between">
+            <div class="">
+              <ul>
+                <li class="flex gap-3">
+                  <span class="text-green-500">+</span>Great location
+                </li>
+                <li class="flex gap-3">
+                  <span class="text-green-500">+</span>Service
+                </li>
+                <li class="flex gap-3">
+                  <span class="text-green-500">+</span>Bottle of changene in the
+                  rooms!
+                </li>
+              </ul>
+            </div>
+
+            <!--  -->
+            <div class="items-end flex font-thin">
+              <p>Reviewed on <br />20 September, 2022</p>
+            </div>
+          </div>
+          <!--  -->
+          <hr class="mt-4 bg-gray-300" />
+          <!--  -->
+          <!--  -->
+          <div class="three flex justify-between mt-4">
+            <div>
+              <p class="font-bold">Good hotel but noise location</p>
+              <span class="text-gray-400 text-[12px]">Karena L</span>
+              <p>
+                Had room facing the street and it was super noisy. Unformately,
+                we couldn't change room.
+              </p>
+              <p class="flex gap-3 mt-4 items-center">
+                <i class="fa-solid fa-minus text-orange-600 text-sm"></i>Noise
+              </p>
+            </div>
+            <!--  -->
+            <div class="flex flex-col gap-5">
+              <div class="flex justify-center items-center gap-5 p-1">
+                <p class="text-[1rem] font-bold text-orange-600">Everage</p>
+                <button
+                  class="w-[60px] p-2 rounded-3xl text-orange-600 bg-orange-200"
+                >
+                  5.6
+                </button>
+              </div>
+
+              <div>
+                <div class="items-end flex font-thin">
+                  <p>Reviewed on <br />10 September, 2022</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  -->
+    <!--  -->
+
     <!-- footer  -->
     <footer class="mt-10 bg-gray-300">
       <nav class="flex justify-between px-10 py-5">
@@ -627,5 +682,6 @@
         </div>
       </nav>
     </footer>
+    <!-- end footer -->
   </body>
 </html>
