--- a/src/pages/searchpage.html
+++ b/src/pages/searchpage.html
@@ -36,41 +36,126 @@
     </header>
     <!--  -->
 
-    <main>
+    <main class="mt-2">
       <section>
-        <div class="flex w-full border-2 justify-between">
-          <div class="one border-2 border-blue-500 flex flex-1">
+        <div class="flex w-full justify-between">
+          <div class="one border-blue-500 flex flex-1">
             <div>
               <h1>jlkasjdflksajfkjsalfjh</h1>
             </div>
           </div>
           <!-- end onw  -->
+
           <!--  -->
-          <div class="two border-2 border-red-500 flex flex-2">
-            <div class="flex justify-between w-full">
-              <div class="border-2 border-red-500">
-                <p class="font-thin text-[6px] text-black">
-                  140 search results for
-                </p>
-                <h1 class="font-bold text-2xl">
-                  Copenagen, Dec 9 - 12, 2 guests, 1 room
-                </h1>
+          <div class="two border-red-500 flex flex-2">
+            <div class="w-full px-4 py-3">
+              <div class="flex justify-between w-full">
+                <div>
+                  <p>140 search results for</p>
+                  <h1 class="font-bold text-2xl">
+                    Copenhagen, Dec 9 - 12, 2 guests, 1 room
+                  </h1>
+                </div>
+                <div class="flex items-end">
+                  <select name="" id="" class="rounded-2xl p-1">
+                    <option value="option 1">Option 1</option>
+                    <option value="option 2">Option 2</option>
+                    <option value="option 3">Option 3</option>
+                    <option value="option 4">Option 4</option>
+                  </select>
+                </div>
               </div>
-              <!--  -->
-              <div class="flex items-end">
-                <select name="" id="" class="border-2 rounded-4xl p-1">
-                  <option value="option 1">Option 1</option>
-                  <option value="option 2">Option 2</option>
-                  <option value="option 3">Option 3</option>
-                  <option value="option 4">Option 4</option>
-                </select>
+
+              <!-- card room -->
+              <div class="cards-room w-full mt-4 p-3">
+                <div
+                  class="w-full flex shadow-[1px_2px_15px_rgba(0,0,0,0.2)] rounded-3xl p-3"
+                >
+                  <div class="flex p-2 flex-1 justify-center">
+                    <!--  -->
+                    <div
+                      class="w-[250px] h-[220px] bg-cover bg-center rounded-2xl bg-[url('https://i.pinimg.com/736x/b8/e3/d7/b8e3d7302458326bded89bfcbf5247c9.jpg')]"
+                    ></div>
+                  </div>
+                  <!--  -->
+                  <div class="w-full flex-2">
+                    <div class="flex justify-between p-2 w-full">
+                      <div>
+                        <h1 class="font-medium">Hotel Norrebro</h1>
+                        <p class="text-sm">0.4 km form city center</p>
+                        <p class="text-sm">
+                          <span>Free cancellation . Breakfast included</span>
+                        </p>
+                      </div>
+                      <div>
+                        <div class="flex items-start gap-3">
+                          <div class="text-center">
+                            <p class="font-bold text-green-600">Excellent</p>
+                            <span class="text-sm text-[10px]"
+                              >1,920 reviews</span
+                            >
+                          </div>
+                          <div
+                            class="w-[65px] flex justify-center items-center h-[40px] rounded-3xl bg-green-300 text-center"
+                          >
+                            <p class="text-green-700">9.6</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="flex justify-between p-2 w-full">
+                      <div>
+                        <h2 class="font-medium">Comfort room</h2>
+                        <p>
+                          <span class="text-sm font-thin"
+                            >1x king size bed</span
+                          >
+                        </p>
+                        <p class="-mt-1">
+                          <span class="text-sm font-thin">1x Bathroom</span>
+                        </p>
+                      </div>
+
+                      <div class="flex items-end">
+                        <div class="p-2">
+                          <p class="font-bold flex justify-end">$180</p>
+                          <p class="text-sm">
+                            <span class="text-[12px]">3 nights, 2 guests</span>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="flex justify-between p-2 w-full">
+                      <div class="text-blue-500">
+                        <button
+                          class="px-4 py-2 rounded-3xl border-2 border-blue-500"
+                        >
+                          #Hot deal
+                        </button>
+                        <button
+                          class="px-4 py-2 rounded-3xl border-2 border-blue-500"
+                        >
+                          # Popular
+                        </button>
+                      </div>
+                      <div>
+                        <button
+                          class="rounded-3xl px-4 py-2 bg-blue-500 text-white"
+                        >
+                          See booking options
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- end card 1 -->
               </div>
-            </div>
-            <!--  -->
-            <div class="card-room">
-              <div></div>
+              <!-- end card 1 -->
             </div>
           </div>
+          <!--  -->
         </div>
       </section>
     </main>
