--- a/src/pages/preparebooking.html
+++ b/src/pages/preparebooking.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>searchpages</title>
+    <title>searchpages2</title>
     <link rel="stylesheet" href="/src/style/output.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
@@ -49,7 +49,7 @@
 
     <main class="mt-2">
       <section>
-        <div class="flex w-full justify-between border-red-600 p-4">
+        <div class="flex w-full gap-8 justify-between border-red-600 p-4">
           <div class="one border-blue-500 w-full flex-1">
             <div class="bg-gray-100 p-4">
               <div
@@ -62,31 +62,37 @@
               </div>
 
               <div class="mt-2">
-                <h1 class="font-bold">Your Search</h1>
+                <h1 class="font-bold">Book Hotel Norrebro</h1>
                 <div>
                   <form action="#" class="p-4">
                     <div>
-                      <label
-                        for="input-group-1"
-                        class="block mb-2 text-sm text-gray-900 dark:text-white"
-                        >Destination</label
-                      >
-                      <div class="relative mb-4">
-                        <div
-                          class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
-                        >
-                          <i class="fa-solid fa-envelope"></i>
+                      <h1 class="font-bold">Step 1:</h1>
+                      <div class="mt-4">
+                        <p>Property amenities</p>
+                        <div class="flex">
+                          <li class="flex gap-4">
+                            <i class="fa-solid fa-wifi"></i>Wifi
+                          </li>
+                          <li class="flex gap-4">
+                            <i class="fa-solid fa-wind"></i>
+                            Air Condition
+                          </li>
+
+                          <li class="flex gap-4">
+                            <i class="fa-regular fa-address-card"></i>
+                            Key Card Access
+                          </li>
+                          <li class="flex gap-4">
+                            <i
+                              class="fa-solid fa-square-parking text-[20px]"
+                            ></i
+                            >Free Parking
+                          </li>
                         </div>
-                        <input
-                          type="text"
-                          id="input-group-1"
-                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                          placeholder="Copenhagen, Denmark"
-                        />
                       </div>
                     </div>
                     <!--  -->
-                    <div>
+                    <!-- <div>
                       <label
                         for="input-group-1"
                         class="block mb-2 text-sm text-gray-900 dark:text-white"
@@ -107,9 +113,9 @@
                           placeholder="Friday, 09 December 2022"
                         />
                       </div>
-                    </div>
+                    </div> -->
                     <!--  -->
-                    <div>
+                    <!-- <div>
                       <label
                         for="input-group-1"
                         class="block mb-2 text-sm text-gray-900 dark:text-white"
@@ -130,10 +136,10 @@
                           placeholder="Monday, 12 December 2022"
                         />
                       </div>
-                    </div>
+                    </div> -->
                     <!--  -->
 
-                    <div>
+                    <!-- <div>
                       <label
                         for="input-group-1"
                         class="block mb-2 text-sm text-gray-900 dark:text-white"
@@ -152,220 +158,47 @@
                           placeholder="2 adult, 1 room"
                         />
                       </div>
-                    </div>
+                    </div> -->
 
-                    <div class="w-full mt-2">
+                    <!-- <div class="w-full mt-2">
                       <button
                         class="w-full p-2 rounded-3xl bg-blue-600 text-white"
                       >
                         Search
                       </button>
-                    </div>
+                    </div> -->
+
+                    <!-- end -->
                   </form>
+                  <!-- end form -->
                 </div>
               </div>
             </div>
             <!--  -->
-            <div class="p-5">
+            <div class="p-5 border-2">
               <h1 class="font-bold">Popular filters</h1>
-              <div class="flex flex-col mt-3 gap-3">
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Budget hotel</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Breakfast included</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Free airport shuttle</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Hostel/Backpacker</label
-                  >
-                </div>
-              </div>
+              <div class="flex flex-col mt-3 gap-3"></div>
             </div>
             <!--  -->
-            <div class="p-5">
+            <div class="p-5 border-2">
               <h1 class="font-bold">Price per night</h1>
-              <div class="flex flex-col mt-3 gap-3">
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Less than $150</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >$50 to $100</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >$100 to $150</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >$150 and more</label
-                  >
-                </div>
-              </div>
+              <div class="flex flex-col mt-3 gap-3"></div>
             </div>
             <!--  -->
-            <div class="p-5">
+            <div class="p-5 border-2">
               <h1 class="font-bold">Guest rating</h1>
-              <div class="flex flex-col mt-3 gap-3">
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Any</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Excellent</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Very good</label
-                  >
-                </div>
-                <div>
-                  <input
-                    id="link-checkbox"
-                    type="checkbox"
-                    value=""
-                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                  />
-                  <label
-                    for="link-checkbox"
-                    class="ms-2 text-sm text-gray-900 dark:text-gray-300"
-                    >Good</label
-                  >
-                </div>
-              </div>
+              <div class="flex flex-col mt-3 gap-3"></div>
             </div>
 
             <!--  -->
-            <div class="p-5">
+            <div class="p-5 border-2">
               <h1 class="font-bold">Property class</h1>
-              <div class="flex mt-3 gap-3 text-center">
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
-                  1 <i class="fa-solid fa-star"></i>
-                </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
-                  2 <i class="fa-solid fa-star"></i>
-                </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
-                  3 <i class="fa-solid fa-star"></i>
-                </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
-                  4 <i class="fa-solid fa-star"></i>
-                </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
-                  5 <i class="fa-solid fa-star"></i>
-                </div>
-              </div>
             </div>
           </div>
           <!-- end onw  -->
 
-          <!--  -->
-          <div class="two border-red-500 flex flex-2">
+          <!-- div 2 -->
+          <div class="two border-red-500 flex flex-1">
             <div class="w-full px-4 py-3">
               <div class="flex justify-between w-full">
                 <div>
