--- a/src/pages/searchpage2.html
+++ b/src/pages/searchpage2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>searchpages</title>
+    <title>searchpages2</title>
     <link rel="stylesheet" href="/src/style/output.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
