--- a/src/pages/detailpage.html
+++ b/src/pages/detailpage.html
@@ -46,6 +46,14 @@
     <!-- section one -->
     <section class="">
       <div class="mt-10 p-1">
+        <div
+          class="h-[50px] flex justify-center items-center w-[50px] p-4 hover:cursor-pointer"
+        >
+          <!-- link  -->
+          <a href="/src/pages/searchpage.html"
+            ><i class="fa-solid fa-arrow-left text-[26px]"></i
+          ></a>
+        </div>
         <div class="flex justify-center gap-5 p-3">
           <!--  -->
           <div
@@ -55,9 +63,11 @@
           <div
             class="grid grid-cols-2 grid-rows-2 flex-1 justify-center items-center"
           >
-            <div
-              class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/6b/61/9b/6b619b18f89bcdceec7e223c28e99f8e.jpg')]"
-            ></div>
+            <a href="/src/pages/preparebooking.html">
+              <div
+                class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/6b/61/9b/6b619b18f89bcdceec7e223c28e99f8e.jpg')]"
+              ></div>
+            </a>
             <div
               class="w-[349px] rounded-2xl h-[128px] bg-cover bg-center bg-[url('https://i.pinimg.com/736x/52/ad/91/52ad91a07d2d4b70b0042255183c4b24.jpg')]"
             ></div>
